fix: prevent page overflow

--- a/src/styles/contiguous-memory-allocation.module.css
+++ b/src/styles/contiguous-memory-allocation.module.css
@@ -1,5 +1,5 @@
 .main {
-	min-height: 600px;
+	max-height: 660px;
 	display: grid;
 	grid-template-areas:
 		"players    algorithms algorithms simulation"
