--- a/src/styles/information.module.css
+++ b/src/styles/information.module.css
@@ -1,5 +1,5 @@
 .information {
-	margin: 1rem auto;
+	margin: 0 auto;
 	padding: 1.5rem;
 	width: 100%;
 	display: flex;
